syntax = "proto3";

package build;

message Stock {
	string ticker = 1;
	float price = 2;
	int32 updated_at = 3;
}

message GetStockPriceRequest {
	repeated string ticker = 1;
}

message GetStockPriceResponse {
	repeated Stock stock = 1;
}

service StockExchange {
    rpc GetStockPrice (GetStockPriceRequest) returns (GetStockPriceResponse) {}
}
